Feat (pos): Add cashier point of sale workflow
